--- a/css/main.css
+++ b/css/main.css
@@ -7,22 +7,22 @@
   padding: 0;
 }
 
+a { text-decoration: none; }
+a:hover { text-decoration: underline; }
+
 /* ==========================================================================
    Typography
    ========================================================================== */
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
+  font: 80px 'Open Sans', sans-serif;
+  font-weight: 800;
+  color: #fff;
 }
 
 /* ==========================================================================
    Structure
    ========================================================================== */
-
-/*.main {
-  width: 1000px;
-  margin: 0 auto;
-}*/
 
 .top-bar {
   width: 100%;
@@ -30,13 +30,17 @@ h1 {
   background: #f7f7f7;
 }
 
+.banner {
+  width: 100%;
+  height: 330px;
+  background: #37acc2;
+}
+
 /* Top Nav Bar
    ========================================================================== */
 
 .top-bar div {
-  width: 1000px;
   padding: 10px 20px;
-  margin: 0 auto;
 }
 
 .top-bar img {
@@ -64,16 +68,43 @@ h1 {
 .top-bar li a {
   font: 16px 'Open Sans', sans-serif;
   color: #2b2b2b;
-  text-decoration: none;
   margin: 0 5px;
-}
-
-.top-bar ul li a:hover {
-  text-decoration: underline;
 }
 
 .facebook-share-button,
 .twitter-share-button {
   float: right;
   margin: 13px 0 0 0;
+}
+
+/* Banner
+   ========================================================================== */
+
+.banner div {
+  padding: 90px 20px 0;
+}
+
+.logo {
+  margin: 32px 10px 0 10px;
+  float: left;
+}
+
+.banner p {
+  margin: 10px 0;
+  text-align: center;
+  font: 18px 'Open Sans', sans-serif;
+  color: #fff;
+}
+
+.banner a {
+  color: #fffa76;
+}
+
+/* ==========================================================================
+   Util
+   ========================================================================== */
+
+.center {
+  width: 1000px;
+  margin: 0 auto;
 }
