--- a/css/main.css
+++ b/css/main.css
@@ -121,13 +121,13 @@ p {
 .content {
   width: 100%;
   background: #f7f7f7;
+  padding-bottom: 50px;
 }
 
 footer {
   width: 100%;
-  height: 330px;
   background: #fff;
-  border: 1px solid #000;
+  padding: 50px 0 30px 0;
 }
 
 /* Top Nav Bar
@@ -411,7 +411,6 @@ footer {
 
 .sponsors ul {
   clear: both;
-  /*margin: 40px 0;*/
 }
 
 .sponsors li {
@@ -426,6 +425,49 @@ footer {
   margin: 0 auto;
 }
 
+/* ==========================================================================
+   Footer
+   ========================================================================== */
+
+footer img {
+  float: left;
+}
+
+footer .about {
+  width: 230px;
+  height: 100px;
+  display: inline-block;
+  margin: 0 0 0 100px;
+}
+
+footer ul {
+  float: right;
+}
+
+footer li {
+  display: inline-block;
+  margin: 0 0 0 10px;
+}
+
+footer .social {
+  margin-top: -70px;
+}
+
+footer .license {
+  float: right;
+  margin-top: -40px;
+}
+
+
+footer a {
+  font-size: 14px;
+}
+
+footer .social a,
+footer .license a,
+footer .license {
+  font-size: 12px;
+}
 
 /* ==========================================================================
    Util
