--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,7 @@ footer {
 .get-involved {
   width: 100%;
   height: 160px;
+  padding: 50px 0;
 }
 
 /* Projects
@@ -450,14 +451,14 @@ footer li {
 }
 
 footer .social {
-  margin-top: -70px;
+  margin-top: 25px;
 }
 
 footer .license {
   float: right;
-  margin-top: -40px;
+  margin-top: 5px;
+  clear: both;
 }
-
 
 footer a {
   font-size: 14px;
