--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ footer {
 .get-involved {
   width: 100%;
   height: 160px;
-  padding: 50px 0;
+  padding: 40px 0 20px;
 }
 
 /* Projects
@@ -451,14 +451,15 @@ footer li {
 }
 
 footer .social {
-  margin-top: 25px;
+  margin-top: -23px;
+  clear: both;
 }
 
 footer .license {
   float: right;
-  margin-top: 5px;
-  clear: both;
+  margin-top: -40px;
 }
+
 
 footer a {
   font-size: 14px;
