--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ body {
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 76px;
   font-weight: 800;
   color: #fff;
 }
@@ -228,7 +228,7 @@ footer {
   margin: 0 10px 50px;
 }
 
-.get-involved {
+.join-us {
   width: 100%;
   height: 160px;
   padding: 40px 0 70px;
@@ -425,21 +425,21 @@ footer {
 /* Get Involved
    ========================================================================== */
 
-.get-involved h3 {
+.join-us h3 {
   font-size: 72px;
 }
 
-.get-involved img {
+.join-us img {
   float: left;
   margin: 20px 50px 30px;
 }
 
-.get-involved p {
+.join-us p {
   font-size: 17px;
   color: #16454e;
 }
 
-.get-involved input[type="email"] {
+.join-us input[type="email"] {
   float: left;
   display: block;
   width: 535px;
@@ -457,7 +457,7 @@ footer {
   box-shadow: inset 2px 2px 11px 0 #dbddde;
 }
 
-.get-involved input[type="submit"] {
+.join-us input[type="submit"] {
   float: left;
   display: block;
   width: 130px;
@@ -484,8 +484,8 @@ footer {
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
 }
 
-.get-involved input[type="submit"]:hover,
-.get-involved input[type="submit"]:focus {
+.join-us input[type="submit"]:hover,
+.join-us input[type="submit"]:focus {
   background-color: #fddb6f;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffb94b), to(#fddb6f));
   background-image: -webkit-linear-gradient(top, #ffb94b, #fddb6f);
@@ -495,14 +495,14 @@ footer {
   background-image: linear-gradient(top, #ffb94b, #fddb6f);
 }
 
-.get-involved input[type="submit"]:active {
+.join-us input[type="submit"]:active {
   outline: none;
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
 }
 
-.get-involved input[type="submit"]::-moz-focus-inner {
+.join-us input[type="submit"]::-moz-focus-inner {
   border: none;
 }
 
@@ -601,7 +601,7 @@ footer img {
 }
 
 footer .about {
-  width: 230px;
+  width: 245px;
   height: 100px;
   display: inline-block;
   margin: 0 0 0 100px;
