align center slogan

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ footer {
    ========================================================================== */
 
 .banner div {
-  padding: 90px 20px 0;
+  padding: 90px 0 0 90px;
 }
 
 .logo {
