--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* ==========================================================================
    Colors
    ========================================================================== */
@@ -201,7 +200,7 @@ footer {
    ========================================================================== */
 
 .banner div {
-  padding: 90px 20px 0;
+  padding: 90px 0 0 90px;
 }
 
 .logo {
