--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,14 +5,14 @@ div.wrapper
     ul.projects
         li.projects-1
             figure
-                img(src='/images/icon-comunnity.png', alt='Community')
+                img(src='/images/icon-community.png', alt='Community')
 
             h4= 'Community'
             p= 'Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.'
             div.arrow
         li.projects-2
             figure
-                img(src='/images/icon-conferece.png', alt='Conference')
+                img(src='/images/icon-conf.png', alt='Conference')
 
             h4= 'Conference'
             p= 'Sum dolor sit amet, consectetur adipiscing elit. Nunc condimentum interdum molestie.'
